yaml/nginx-ep-external.yaml
apiVersion: v1
kind: Endpoints
metadata:
  labels:
    app: nginx-svc-external
  name: nginx-svc-external
  namespace: default
subsets:
- addresses:
  - ip: 39.156.69.79
  ports:
  - name: http
    port: 80
    protocol: TCP
