yaml/ingress.yaml
apiVersion: networking.k8s.io/v1beta1 
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: example
spec:
  rules: 
  - host: foo.bar.com 
    http:
      paths:
      - backend:
          serviceName: web
          servicePort: 80
        path: /
